- Added some code to store the process ids launched by the dock - Added "Don't show this message again" option in some dialog boxes
git-svn-id: https://appetizer.googlecode.com/svn@179 ff61cf6c-2836-11df-8847-f3d5e5ef3dde

--- a/trunk/MiniLaunchBar.vcproj
+++ b/trunk/MiniLaunchBar.vcproj
@@ -641,6 +641,18 @@
 					</FileConfiguration>
 				</File>
 				<File
+					RelativePath=".\gui\BetterMessageDialog.cpp"
+					>
+					<FileConfiguration
+						Name="Unicode Debug|Win32"
+						>
+						<Tool
+							Name="VCCLCompilerTool"
+							PrecompiledHeaderThrough="../precompiled.h"
+						/>
+					</FileConfiguration>
+				</File>
+				<File
 					RelativePath=".\gui\ConfigDialog.cpp"
 					>
 					<FileConfiguration
@@ -916,6 +928,10 @@
 				</File>
 				<File
 					RelativePath=".\gui\AboutDialogBase.h"
+					>
+				</File>
+				<File
+					RelativePath=".\gui\BetterMessageDialog.h"
 					>
 				</File>
 				<File
