- Done a test to cache icons, which is faster in some instances but slower in others, so will probably drop the idea. - FolderItem: Cleaned up code to retrieve the icon. - Done PA launcher - Done PAF installer
git-svn-id: https://appetizer.googlecode.com/svn@180 ff61cf6c-2836-11df-8847-f3d5e5ef3dde

--- a/trunk/MiniLaunchBar.vcproj
+++ b/trunk/MiniLaunchBar.vcproj
@@ -612,6 +612,46 @@
 						/>
 					</FileConfiguration>
 				</File>
+				<Filter
+					Name="wxMD5"
+					>
+					<File
+						RelativePath=".\third_party\wxMD5\md5c.c"
+						>
+						<FileConfiguration
+							Name="Unicode Debug|Win32"
+							>
+							<Tool
+								Name="VCCLCompilerTool"
+								UsePrecompiledHeader="0"
+							/>
+						</FileConfiguration>
+					</File>
+					<File
+						RelativePath=".\third_party\wxMD5\mddriver.c"
+						>
+						<FileConfiguration
+							Name="Unicode Debug|Win32"
+							>
+							<Tool
+								Name="VCCLCompilerTool"
+								UsePrecompiledHeader="0"
+							/>
+						</FileConfiguration>
+					</File>
+					<File
+						RelativePath=".\third_party\wxMD5\wxMD5.cpp"
+						>
+						<FileConfiguration
+							Name="Unicode Debug|Win32"
+							>
+							<Tool
+								Name="VCCLCompilerTool"
+								UsePrecompiledHeader="0"
+							/>
+						</FileConfiguration>
+					</File>
+				</Filter>
 			</Filter>
 			<Filter
 				Name="gui"
@@ -918,6 +958,22 @@
 					RelativePath=".\third_party\tinyxml\tinyxml.h"
 					>
 				</File>
+				<Filter
+					Name="wxMD5"
+					>
+					<File
+						RelativePath=".\third_party\wxMD5\global.h"
+						>
+					</File>
+					<File
+						RelativePath=".\third_party\wxMD5\md5.h"
+						>
+					</File>
+					<File
+						RelativePath=".\third_party\wxMD5\wxMD5.h"
+						>
+					</File>
+				</Filter>
 			</Filter>
 			<Filter
 				Name="gui"
