--- a/trunk/MiniLaunchBar.vcproj
+++ b/trunk/MiniLaunchBar.vcproj
@@ -188,7 +188,7 @@
 				PreprocessorDefinitions="WINVER=0x0400;wxUSE_GUI=1;__WXDEBUG__"
 				RuntimeLibrary="1"
 				UsePrecompiledHeader="2"
-				PrecompiledHeaderThrough="precompiled.h"
+				PrecompiledHeaderThrough="stdafx.h"
 				DebugInformationFormat="4"
 			/>
 			<Tool
@@ -366,7 +366,7 @@
 				>
 			</File>
 			<File
-				RelativePath=".\precompiled.cpp"
+				RelativePath=".\stdafx.cpp"
 				>
 				<FileConfiguration
 					Name="Unicode Debug|Win32"
@@ -400,7 +400,7 @@
 						>
 						<Tool
 							Name="VCCLCompilerTool"
-							PrecompiledHeaderThrough="../precompiled.h"
+							PrecompiledHeaderThrough="../stdafx.h"
 						/>
 					</FileConfiguration>
 				</File>
@@ -412,7 +412,7 @@
 						>
 						<Tool
 							Name="VCCLCompilerTool"
-							PrecompiledHeaderThrough="../precompiled.h"
+							PrecompiledHeaderThrough="../stdafx.h"
 						/>
 					</FileConfiguration>
 				</File>
@@ -424,7 +424,7 @@
 						>
 						<Tool
 							Name="VCCLCompilerTool"
-							PrecompiledHeaderThrough="../precompiled.h"
+							PrecompiledHeaderThrough="../stdafx.h"
 						/>
 					</FileConfiguration>
 				</File>
@@ -436,7 +436,7 @@
 						>
 						<Tool
 							Name="VCCLCompilerTool"
-							PrecompiledHeaderThrough="../precompiled.h"
+							PrecompiledHeaderThrough="../stdafx.h"
 						/>
 					</FileConfiguration>
 				</File>
@@ -452,7 +452,7 @@
 						>
 						<Tool
 							Name="VCCLCompilerTool"
-							PrecompiledHeaderThrough="../precompiled.h"
+							PrecompiledHeaderThrough="../stdafx.h"
 						/>
 					</FileConfiguration>
 				</File>
@@ -464,7 +464,7 @@
 						>
 						<Tool
 							Name="VCCLCompilerTool"
-							PrecompiledHeaderThrough="../precompiled.h"
+							PrecompiledHeaderThrough="../stdafx.h"
 						/>
 					</FileConfiguration>
 				</File>
@@ -480,7 +480,7 @@
 						>
 						<Tool
 							Name="VCCLCompilerTool"
-							PrecompiledHeaderThrough="../precompiled.h"
+							PrecompiledHeaderThrough="../stdafx.h"
 						/>
 					</FileConfiguration>
 				</File>
@@ -492,7 +492,7 @@
 						>
 						<Tool
 							Name="VCCLCompilerTool"
-							PrecompiledHeaderThrough="../precompiled.h"
+							PrecompiledHeaderThrough="../stdafx.h"
 						/>
 					</FileConfiguration>
 				</File>
@@ -504,7 +504,7 @@
 						>
 						<Tool
 							Name="VCCLCompilerTool"
-							PrecompiledHeaderThrough="../precompiled.h"
+							PrecompiledHeaderThrough="../stdafx.h"
 						/>
 					</FileConfiguration>
 				</File>
@@ -516,7 +516,7 @@
 						>
 						<Tool
 							Name="VCCLCompilerTool"
-							PrecompiledHeaderThrough="../precompiled.h"
+							PrecompiledHeaderThrough="../stdafx.h"
 						/>
 					</FileConfiguration>
 				</File>
@@ -528,7 +528,7 @@
 						>
 						<Tool
 							Name="VCCLCompilerTool"
-							PrecompiledHeaderThrough="../precompiled.h"
+							PrecompiledHeaderThrough="../stdafx.h"
 						/>
 					</FileConfiguration>
 				</File>
@@ -540,7 +540,7 @@
 						>
 						<Tool
 							Name="VCCLCompilerTool"
-							PrecompiledHeaderThrough="../precompiled.h"
+							PrecompiledHeaderThrough="../stdafx.h"
 						/>
 					</FileConfiguration>
 				</File>
@@ -552,7 +552,7 @@
 						>
 						<Tool
 							Name="VCCLCompilerTool"
-							PrecompiledHeaderThrough="../precompiled.h"
+							PrecompiledHeaderThrough="../stdafx.h"
 						/>
 					</FileConfiguration>
 				</File>
@@ -648,7 +648,7 @@
 						>
 						<Tool
 							Name="VCCLCompilerTool"
-							PrecompiledHeaderThrough="../precompiled.h"
+							PrecompiledHeaderThrough="../stdafx.h"
 						/>
 					</FileConfiguration>
 				</File>
@@ -672,7 +672,7 @@
 						>
 						<Tool
 							Name="VCCLCompilerTool"
-							PrecompiledHeaderThrough="../precompiled.h"
+							PrecompiledHeaderThrough="../stdafx.h"
 						/>
 					</FileConfiguration>
 				</File>
@@ -684,7 +684,7 @@
 						>
 						<Tool
 							Name="VCCLCompilerTool"
-							PrecompiledHeaderThrough="../precompiled.h"
+							PrecompiledHeaderThrough="../stdafx.h"
 						/>
 					</FileConfiguration>
 				</File>
@@ -708,7 +708,7 @@
 						>
 						<Tool
 							Name="VCCLCompilerTool"
-							PrecompiledHeaderThrough="../precompiled.h"
+							PrecompiledHeaderThrough="../stdafx.h"
 						/>
 					</FileConfiguration>
 				</File>
@@ -732,7 +732,7 @@
 						>
 						<Tool
 							Name="VCCLCompilerTool"
-							PrecompiledHeaderThrough="../precompiled.h"
+							PrecompiledHeaderThrough="../stdafx.h"
 						/>
 					</FileConfiguration>
 				</File>
@@ -756,7 +756,7 @@
 						>
 						<Tool
 							Name="VCCLCompilerTool"
-							PrecompiledHeaderThrough="../precompiled.h"
+							PrecompiledHeaderThrough="../stdafx.h"
 						/>
 					</FileConfiguration>
 				</File>
@@ -840,7 +840,7 @@
 				>
 			</File>
 			<File
-				RelativePath=".\precompiled.h"
+				RelativePath=".\stdafx.h"
 				>
 			</File>
 			<File
