- FolderItem: Started implementing support for custom icons - MainFrame: Now closes children modal dialogs using EndModal to fix all sort of issues that happen when the app is closed while modal dialogs are opened. - IconGetter: Fixed error when getting the icon of a drive - IconGetter::GetDocumentIcon: Fixed error when icon location returned by MimeTypeManager is invalid - Created FileOrFolderDialog - Created IconDialog
git-svn-id: https://appetizer.googlecode.com/svn@191 ff61cf6c-2836-11df-8847-f3d5e5ef3dde

--- a/trunk/MiniLaunchBar.vcproj
+++ b/trunk/MiniLaunchBar.vcproj
@@ -701,6 +701,30 @@
 					</FileConfiguration>
 				</File>
 				<File
+					RelativePath=".\gui\FileExplorerControl.cpp"
+					>
+					<FileConfiguration
+						Name="Unicode Debug|Win32"
+						>
+						<Tool
+							Name="VCCLCompilerTool"
+							PrecompiledHeaderThrough="../stdafx.h"
+						/>
+					</FileConfiguration>
+				</File>
+				<File
+					RelativePath=".\gui\FileOrFolderDialog.cpp"
+					>
+					<FileConfiguration
+						Name="Unicode Debug|Win32"
+						>
+						<Tool
+							Name="VCCLCompilerTool"
+							PrecompiledHeaderThrough="../stdafx.h"
+						/>
+					</FileConfiguration>
+				</File>
+				<File
 					RelativePath=".\gui\GroupEditorDialog.cpp"
 					>
 					<FileConfiguration
@@ -721,6 +745,18 @@
 						<Tool
 							Name="VCCLCompilerTool"
 							UsePrecompiledHeader="0"
+						/>
+					</FileConfiguration>
+				</File>
+				<File
+					RelativePath=".\gui\IconDialog.cpp"
+					>
+					<FileConfiguration
+						Name="Unicode Debug|Win32"
+						>
+						<Tool
+							Name="VCCLCompilerTool"
+							PrecompiledHeaderThrough="../stdafx.h"
 						/>
 					</FileConfiguration>
 				</File>
@@ -979,11 +1015,23 @@
 					>
 				</File>
 				<File
+					RelativePath=".\gui\FileExplorerControl.h"
+					>
+				</File>
+				<File
+					RelativePath=".\gui\FileOrFolderDialog.h"
+					>
+				</File>
+				<File
 					RelativePath=".\gui\GroupEditorDialog.h"
 					>
 				</File>
 				<File
 					RelativePath=".\gui\GroupEditorDialogBase.h"
+					>
+				</File>
+				<File
+					RelativePath=".\gui\IconDialog.h"
 					>
 				</File>
 				<File
