- Finished ImportWizardDialog and added button to option panel - FolderItem: Optimized ResolvePath() function, which greatly increases speed of FolderItem::GetChildByResolvedPath() - Added BuildInstaller script
git-svn-id: https://appetizer.googlecode.com/svn@194 ff61cf6c-2836-11df-8847-f3d5e5ef3dde

--- a/trunk/MiniLaunchBar.vcproj
+++ b/trunk/MiniLaunchBar.vcproj
@@ -1123,6 +1123,18 @@
 					</FileConfiguration>
 				</File>
 				<File
+					RelativePath=".\gui\ImportWizardDialog.cpp"
+					>
+					<FileConfiguration
+						Name="Unicode Debug|Win32"
+						>
+						<Tool
+							Name="VCCLCompilerTool"
+							PrecompiledHeaderThrough="../stdafx.h"
+						/>
+					</FileConfiguration>
+				</File>
+				<File
 					RelativePath=".\gui\ShortcutEditorDialog.cpp"
 					>
 					<FileConfiguration
@@ -1420,6 +1432,10 @@
 				</File>
 				<File
 					RelativePath=".\gui\IconDialog.h"
+					>
+				</File>
+				<File
+					RelativePath=".\gui\ImportWizardDialog.h"
 					>
 				</File>
 				<File
