--- a/trunk/_PAFRES/appinfo.tmpl.ini
+++ b/trunk/_PAFRES/appinfo.tmpl.ini
@@ -3,7 +3,7 @@ Type=PortableApps.comFormat
 Version=0.9.8
 
 [Details]
-Name=Appetizer Portable
+Name=Appetizer
 Publisher=Appetizer Project
 Homepage=http://appetizer.sourceforge.net
 Category=Utilities
@@ -21,4 +21,4 @@ DisplayVersion=___SHORT_VERSION___
 
 [Control]
 Icons=1
-Start=AppetizerPortable.exe
+Start=Appetizer.exe
